--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 	"devDependencies": {
 		"@babel/types": "^7.25.2",
 		"@tsconfig/node20": "^20.1.4",
+		"@types/glob": "^8.1.0",
 		"@types/node": "^20.14.5",
 		"@vitejs/plugin-vue": "^5.0.5",
 		"@vue/tsconfig": "^0.5.1",
 		"npm-run-all2": "^6.2.0",
+		"type-fest": "^4.23.0",
 		"typescript": "~5.4.0",
 		"vite": "^5.3.1",
 		"vue-tsc": "^2.0.21"
