--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,23 +1,14 @@
 {
-  // "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "extends": "./tsconfig.base.json",
   "include": [
     "env.d.ts",
     "src/**/*",
     "src/**/*.vue",
     "src/**/*.ts",
-    "src/**/*.tsx",
-  ],
-  "exclude": [
-    "src/**/__tests__/*"
+    "src/**/*.tsx"
   ],
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo"
   }
 }
