--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,23 @@
 {
-  "extends": "./tsconfig.base.json",
+  // "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": [
     "env.d.ts",
     "src/**/*",
     "src/**/*.vue",
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+  ],
+  "exclude": [
+    "src/**/__tests__/*"
   ],
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo"
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
