这次肯定没问题了

--- a/.github/workflows/huahua.yml
+++ b/.github/workflows/huahua.yml
@@ -3,4 +3,6 @@ on: push
 jobs:
   runs-on: ubuntu-latest
   steps:
-    - run: npm run dev
+    - uses: actions/checkout@v4
+    - run: npm install
+    - run: npm run build
