这次肯定没问题了

--- a/.github/workflows/huahua.yml
+++ b/.github/workflows/huahua.yml
@@ -1,8 +1,9 @@
 on: push
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    - run: npm install
-    - run: npm run build
+  npm-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: npm install
+      - run: npm run build
