--- a/.github/workflows/huahua.yml
+++ b/.github/workflows/huahua.yml
@@ -1,9 +1,18 @@
+name: 打包vue项目
+
 on: push
 
 jobs:
   npm-build:
+    name: npm-build工作
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - run: npm install
-      - run: npm run build
+      - name: 读取仓库地址
+        uses: actions/checkout@v4
+
+      - name: 安装依赖
+        run: npm install
+
+      - name: 启动项目
+        run: npm run build
