--- a/.github/workflows/huahua.yml
+++ b/.github/workflows/huahua.yml
@@ -13,11 +13,10 @@ jobs:
       - name: 读取仓库地址
         uses: actions/checkout@v4
 
-      - name: 安装依赖
-        run: npm install
-
-      - name: 启动项目
-        run: npm run build
+      - name: 安装和打包
+        run: |
+          npm install
+          npm build
 
       - name: 部署
         uses: JamesIves/github-pages-deploy-action@v4
