--- a/.github/workflows/huahua.yml
+++ b/.github/workflows/huahua.yml
@@ -1,9 +1,6 @@
 name: 打包vue项目
 on: push
 
-permissions:
-  contents: write
-
 jobs:
   npm-build:
     name: npm-build工作
@@ -16,9 +13,9 @@ jobs:
       - name: 安装和打包
         run: |
           npm install
-          npm build
+          npm run build
 
-      - name: 部署
+      - name: 部署到 GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
